style: table cell fix on mobile devices

--- a/src/components/CSS/AddMoreCourse.module.css
+++ b/src/components/CSS/AddMoreCourse.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  overflow-x: hidden;
 }
 .add-more-courses{
   width: 78vw;
