--- a/src/components/CSS/TableCell.css
+++ b/src/components/CSS/TableCell.css
@@ -49,6 +49,7 @@
 .cell-overlay-content{
     margin-top: .25rem;
     margin-left: .25rem;
+    position: relative;
 }
 .cell-overlay-instructors{
     margin-top: .15rem;
@@ -57,6 +58,9 @@
 }
 .cell-overlay-mobile{
     display: none;
+    margin-top: .5rem;
+    position: absolute;
+    top: 1.25rem;
 }
 .cell-cover:hover{
     transform: scale(2.2);
@@ -86,9 +90,8 @@
     .cell-content > div{
         display: none;
     }
-    .cell-overlay-content{
-        margin-top: .25rem;
-        margin-left: 0;
+    .cell-heading{
+        margin-left: .5rem;
     }
     .cell-overlay-instructors{
         display: none;
@@ -114,7 +117,18 @@
         transform: scale(.8);
     }
     .cell-overlay-content{
-        margin-top: -.05rem;
+        margin-top: .5rem;
         margin-left: -.5rem;
+    }
+}
+@media (max-width: 400px) {
+    .cell-overlay-content{
+        margin-top: 0.15rem;
+    }
+    .cell-overlay-mobile{
+        margin-top: 0;
+    }
+    .cell-heading{
+        margin-left: .25rem;
     }
 }
